Added jquery and ps.core.js to layout

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,3 +6,5 @@ html(lang="en")
     header
       div.logo= 'Privacy Scanner'
       block content
+    script(src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
+    script(src = 'js/ps.core.js')
