Added stylesheet to layout template.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype 5
 html(lang="en")
   head
     title
+    link(rel = 'stylesheet', src = 'stylesheets/style.css')
   body
     header
       div.logo= 'Privacy Scanner'
