Added stylesheet and scripts block to layout template

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,10 +2,11 @@ doctype 5
 html(lang="en")
   head
     title
-    link(rel = 'stylesheet', src = 'stylesheets/style.css')
+    link(rel = 'stylesheet', href = 'stylesheets/style.css')
   body
     header
       div.logo= 'Privacy Scanner'
     block content
     script(src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
     script(src = 'js/ps.core.js')
+    block scripts
