Layout now calls PS.ui file.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,4 +17,5 @@ html(lang="en")
     block content
     script(src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
     script(src = 'js/ps.core.js')
+    script(src = 'js/ps.ui.js')
     block scripts
