--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,6 +16,7 @@ html(lang="en")
       div.logo= 'Privacy Scanner'
     block content
     script(src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
+    script(src='js/underscore.js')
     script(src = 'js/ps.core.js')
     script(src = 'js/ps.ui.js')
     block scripts
