Stubbing out some logo/typography styles

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -4,5 +4,12 @@
 @import "tabs"
 
 body
-  font-size font_size
-  font-family font_family
+  font-size: font_size
+  font-family: font_family
+
+.logo
+  a
+    color: $text_color
+    text-decoration: none
+    font-weight: bold
+    font-size: 24px
