Standardizing variable names with preceding $ in stylus files.

--- a/public/stylesheets/layout.styl
+++ b/public/stylesheets/layout.styl
@@ -1,7 +1,7 @@
 header
-  width: chrome_width 
+  width: $chrome_width 
   margin: 0 auto
 
 #content
-  width: chrome_width
+  width: $chrome_width
   margin: 0 auto
