--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -4,8 +4,8 @@
 @import "tabs"
 
 body
-  font-size: font_size
-  font-family: font_family
+  font-size: $font_size
+  font-family: $font_family
 
 .logo
   a
