--- a/public/stylesheets/variables.styl
+++ b/public/stylesheets/variables.styl
@@ -1,7 +1,7 @@
 // Typography
 $text_color = #313131
-font_family = Helvetica, Arial, sans-serif
-font_size = 12px
+$font_family = Helvetica, Arial, sans-serif
+$font_size = 12px
 
 // Layout
-chrome_width = 960px
+$chrome_width = 960px
