Added some base variables and css organization for homepage form elem.

--- a/public/stylesheets/variables.styl
+++ b/public/stylesheets/variables.styl
@@ -5,3 +5,11 @@ $font_size = 12px
 
 // Layout
 $chrome_width = 960px
+
+// Colors
+$dark_gray = #bbb
+$gray = #ddd
+$pale_gray = #e5e5e5
+$pale_background = #FAFAFB
+
+$border = 1px solid #ddd
