--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,15 +1,33 @@
 @import "reset"
 @import "variables"
+@import "base"
 @import "layout"
 @import "tabs"
 
-body
-  font-size: $font_size
-  font-family: $font_family
-
 .logo
+  margin-bottom: 10px
+
   a
     color: $text_color
     text-decoration: none
     font-weight: bold
     font-size: 24px
+
+form.url
+  border-radius: 3px
+  background: $pale_background
+  border: $border
+  padding: 10px
+  overflow: hidden
+  margin-bottom: 20px
+
+  input
+    float: left
+    width: 850px
+    height: 30px
+    line-height: 30px
+    font-size: 24px
+    font-family: inherit
+
+  .button
+    margin-left: 8px
