Tweaked index views form a bit.

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   div#content
     form.url
       input()
-      div(data-role='submit') Go!
+      div(class='button', data-role='submit') Submit
 
     //
       div(class='tabs-module', data-role = 'tabs-module')
