Added some base tabs styles.

--- a/public/stylesheets/base.styl
+++ b/public/stylesheets/base.styl
@@ -13,8 +13,7 @@ body
   color: $text_color
   background-color: $pale_gray 
   border-radius: 3px
-  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(1, #fff), color-stop(0, $pale_gray))
-  background-image: -moz-linear-gradient(center bottom, $pale_gray 0%, #fff 100%)
+  $pale_gradient()
   font-weight: bold
   text-align: center
   text-decoration: none
