--- a/public/stylesheets/variables.styl
+++ b/public/stylesheets/variables.styl
@@ -13,3 +13,8 @@ $pale_gray = #e5e5e5
 $pale_background = #FAFAFB
 
 $border = 1px solid #ddd
+
+//Mixins
+$pale_gradient()
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(1, #fff), color-stop(0, $pale_gray))
+  background-image: -moz-linear-gradient(center bottom, $pale_gray 0%, #fff 100%)
