Added some basic placeholder styles and form element styles

--- a/public/stylesheets/base.styl
+++ b/public/stylesheets/base.styl
@@ -22,3 +22,8 @@ body
   height: 32px
   cursor: pointer
   padding: 0 15px
+
+input::-webkit-input-placeholder
+  color: #ccc
+  font-family: inherit
+  font-weight: normal
