--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -5,13 +5,20 @@
 @import "tabs"
 
 .logo
-  margin-bottom: 10px
+  margin-bottom: 15px
 
   a
     color: $text_color
     text-decoration: none
     font-weight: bold
     font-size: 24px
+    line-height: 26px
+
+    span
+      color: $secondary_text
+      font-weight: normal
+      display: block
+      font-size: 20px
 
 form.url
   border-radius: 3px
@@ -26,7 +33,7 @@ form.url
     width: 850px
     height: 30px
     line-height: 30px
-    font-size: 24px
+    font-size: 20px
     font-family: inherit
 
   .button
