input now features placeholder text

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   div#content
     form.url
-      input()
+      input(placeholder='Enter a URL to learn more about its privacy rating')
       div(class='button', data-role='submit') Submit
 
     div(class='tabs-module', data-role = 'tabs-module')
