Added some subtitle copy.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,6 +15,7 @@ html(lang="en")
     header
       div.logo
         a(href='/') PrivacyScanner
+          span Is your site sharing its users' data?
     block content
     script(src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
     script(src='js/underscore.js')
