--- a/public/stylesheets/tabs.styl
+++ b/public/stylesheets/tabs.styl
@@ -12,7 +12,7 @@
         border: $border
         border-bottom: none
         border-left: none
-        padding: 0 10px
+        padding: 0 20px
         font-weight: bold
         text-align: center
         text-decoration: none
@@ -32,7 +32,9 @@
     display: none
     clear: left
     border: $border
-    padding: 30px 10px
+    padding: 30px 20px
+    overflow: hidden
+    background: #fff
 
   div.panel.current
     display: block
