--- a/public/stylesheets/base.styl
+++ b/public/stylesheets/base.styl
@@ -4,6 +4,11 @@ body
   padding: 40px
   font-size: $font_size
   font-family: $font_family
+  background: $pale_background
+
+h1
+  font-weight: bold
+  font-size: 18px
 
 .button
   display: inline-block
