--- a/views/index.jade
+++ b/views/index.jade
@@ -25,15 +25,16 @@ block content
             li Do something else
       div(class = 'panel', data-role='panel', data-panel-id='#panel-2')
         p tab panel 2
+        div#summary
+        div#treeView
+
 block scripts
   script(type='text/javascript')
     $(document).ready(function() { 
-
       PS.ui.tabs();
+
       $('[data-role="submit"]').click(function(evt){
-        console.log('dfdf');
         $url = $('.url input').val();
         PS.core.getHar($url);
       });
-
     });
