--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html(lang="en")
   head
     title
     link(rel = 'stylesheet', href = 'stylesheets/style.css')
+    link(rel = 'stylesheet', href = 'stylesheets/treeview.css')
     script
       if (typeof PS === 'undefined' || !PS) {
         var PS = {};
@@ -18,7 +19,12 @@ html(lang="en")
           span Is your site sharing its users' data?
     block content
     script(src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
-    script(src='js/underscore.js')
+    script(src = 'js/underscore.js')
+    script(src = 'js/jquery.treeview.js')
+    script(src = 'js/harParser.js')
+    script(src = 'js/harTreeView.js')
+    script(src = 'js/treeview-page.js')
+    script(src = 'js/ps.ui.js')
     script(src = 'js/ps.core.js')
     script(src = 'js/ps.ui.js')
     block scripts
