Treeview now sourced from vendor directory.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html(lang="en")
   head
     title
     link(rel = 'stylesheet', href = 'stylesheets/style.css')
-    link(rel = 'stylesheet', href = 'stylesheets/treeview.css')
+    link(rel = 'stylesheet', href = 'vendor/treeview/css/treeview.css')
     script
       if (typeof PS === 'undefined' || !PS) {
         var PS = {};
@@ -20,7 +20,7 @@ html(lang="en")
     block content
     script(src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
     script(src = 'js/underscore.js')
-    script(src = 'js/jquery.treeview.js')
+    script(src = 'vendor/treeview/js/jquery.treeview.js')
     script(src = 'js/harParser.js')
     script(src = 'js/harTreeView.js')
     script(src = 'js/treeview-page.js')
