--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
         li
           a(href='#panel-1') Overview
         li
-          a(href='#panel-2') Analysis
+          a(href='#panel-2') Tree View
       div(class = 'panel', data-role='panel', data-panel-id='#panel-1')
         div.score
           h1 Score
@@ -24,7 +24,6 @@ block content
             li Do something else
             li Do something else
       div(class = 'panel', data-role='panel', data-panel-id='#panel-2')
-        p tab panel 2
         div#summary
         div#treeView
 
