Form submission now performs AJAX call rather than button click.

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -28,7 +28,7 @@ form.url
   overflow: hidden
   margin-bottom: 20px
 
-  input
+  input.text
     float: left
     width: 840px
     height: 30px
@@ -37,7 +37,9 @@ form.url
     font-family: inherit
     padding-left: 10px
 
-  .button
+  input.button
+    font-family: inherit
+    font-size: 12px
     margin-left: 8px
 
 .score
