Layout template now references utils library.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,5 +26,6 @@ html(lang="en")
     script(src = 'js/treeview-page.js')
     script(src = 'js/ps.ui.js')
     script(src = 'js/ps.core.js')
+    script(src = 'js/ps.utils.js')
     script(src = 'js/ps.ui.js')
     block scripts
