Added basic error styling.

--- a/public/stylesheets/base.styl
+++ b/public/stylesheets/base.styl
@@ -35,3 +35,9 @@ input::-webkit-input-placeholder
 
 p.error
   clear: left
+  background: #ffbaba
+  border: 2px solid #d8000c
+  color: #d8000c
+  font-weight: bold
+  padding: 10px
+  margin-top: 10px
