p.message now display none by default.

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -42,6 +42,9 @@ form.url
     font-size: 12px
     margin-left: 8px
 
+  p.message
+    display: none
+
 .score
   border: $border
   background: $pale_background
