Added p.message to house user messaging.

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ block content
     form.url
       input(class='text', placeholder='Enter a URL to learn more about its privacy rating')
       input(type='submit', class='button', data-role='submit') Submit
+      p.message
 
     div(class='tabs-module', data-role = 'tabs-module')
       ul(class = 'tabs', data-role = 'tabs')
