Added visualization tab

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,8 @@ block content
           a(href='#panel-1') Overview
         li
           a(href='#panel-2') Tree View
+        li
+          a(href='#panel-3') Visualization
       div(class = 'panel', data-role='panel', data-panel-id='#panel-1')
         div.score
           h1 Score
@@ -27,6 +29,8 @@ block content
       div(class = 'panel', data-role='panel', data-panel-id='#panel-2')
         div#summary
         div#treeView
+      div(class = 'panel', data-role='panel', data-panel-id='#panel-3')
+        div#container
 
 block scripts
   script(type='text/javascript')
