Added call to processTreeNode to index template. Also console.logging data. TODO: remove console.log in the future.

--- a/views/index.jade
+++ b/views/index.jade
@@ -36,5 +36,9 @@ block scripts
         $url = $(this).find('input').val();
         PS.core.getHar($url);
         evt.preventDefault();
+        $(document).bind('harData', 'body', function (evt, data) {
+          console.log('harData: ', data);
+          processTreeView(JSON.stringify(data), $('#treeView'));
+        });
       });
     });
