--- a/views/index.jade
+++ b/views/index.jade
@@ -21,11 +21,7 @@ block content
           p 72
         div.recommendations
           h1 Recommendations
-          ul
-            li Do something
-            li Do something else
-            li Do something else
-            li Do something else
+          ul(data-role='recommendations')
       div(class = 'panel', data-role='panel', data-panel-id='#panel-2')
         div#summary
         div#treeView
@@ -44,6 +40,7 @@ block scripts
           console.log('harData: ', data);
           processTreeView(JSON.stringify(data), $('#treeView'));
           PS.core.reportScore(data.overall_privacy_score);
+          PS.core.reportRecommendations(data.privacy_recommendations);
         });
       });
     });
