Fixing last commit

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   div#content
     form.url
-      input(class='text', placeholder='Put in a URL, we give you back privacy info.')
+      input(class='text', placeholder='Enter a URL')
       input(type='submit', class='button', data-role='submit') Submit
       p.message
 
