Added some rudimentary error, congrats, and warning message styles. Note that these are subject to re-assessment.

--- a/public/stylesheets/base.styl
+++ b/public/stylesheets/base.styl
@@ -33,11 +33,39 @@ input::-webkit-input-placeholder
   font-family: inherit
   font-weight: normal
 
-p.error
+.message
   clear: left
-  background: #ffbaba
-  border: 2px solid #d8000c
-  color: #d8000c
   font-weight: bold
   padding: 10px
   margin-top: 10px
+
+.error
+  //border: 2px solid #d8000c
+  //background: #ffbaba
+  //color: #d8000c
+
+  border: 2px solid #933
+  background: #fee
+  color: #933
+
+  h1
+    background: #933
+    color: #fff
+  
+.warning
+  background: #feefb3
+  border: 2px solid #9f6000
+  color: #9f6000
+
+  h1
+    background: #9f6000
+    color: #fff
+
+.congrats
+  background: #dff2bf
+  border: 2px solid #4f8a10
+  color: #4f8a10
+
+  h1
+    background: #4f8a10
+    color: #fff
