--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,7 +19,7 @@ html(lang="en")
     header
       div.logo
         a(href='/') PrivacyScanner
-          span Put in a url, we give you back privacy info.
+          span Put in a URL, we give you back privacy info.
     block content
     script(src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
     script(src = 'http://mbostock.github.com/d3//d3.v2.js?2.8.1')
