Chang the name of the button to analyze

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   div#content
     form.url
       input(class='text', placeholder='Enter a URL')
-      input(type='submit', class='button', data-role='submit') Submit
+      input(type='submit', class='button', value='Analyze', 'data-role='submit') Submit
       p.message
 
     div(class='tabs-module', data-role = 'tabs-module')
