--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,7 @@ html(lang="en")
         a(href='/') PrivacyScanner
           span Put in a URL, we give you back privacy info.
     block content
+    div#overlay-mask
     script(src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
     script(src = 'http://mbostock.github.com/d3//d3.v2.js?2.8.1')
     script(src = 'js/sunburst.js')
