--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -269,6 +269,31 @@ header {
 .tabs-module div.panel.current {
   display: block;
 }
+#overlay-mask {
+  background: #000;
+  position: fixed;
+  opacity: 0.75;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 9000;
+  display: none;
+}
+.overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: #fff;
+  display: none;
+  z-index: 9999;
+  padding: 20px;
+  width: 450px;
+  border: 7px solid #888;
+  height: 235px;
+  width: 235px;
+  overflow: auto;
+}
 .logo {
   margin-bottom: 15px;
 }
