Fixed heading styles, which were previously overwritten by vendor code.

--- a/public/stylesheets/base.styl
+++ b/public/stylesheets/base.styl
@@ -6,9 +6,10 @@ body
   font-family: $font_family
   background: $pale_background
 
-h1
-  font-weight: bold
-  font-size: 18px
+#content
+  h1
+    font-weight: bold
+    font-size: 18px
 
 .button
   display: inline-block
