--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -157,7 +157,7 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   background: #fafafb;
 }
-h1 {
+#content h1 {
   font-weight: bold;
   font-size: 18px;
 }
